--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 .css-168qaks-MuiButtonBase-root-MuiTab-root.Mui-selected {
-  color: #ddd !important;
+  color: #fff !important;
   background-color: #33cf96;
-  padding: 0px 15px !important;
+  padding: 7px 15px !important;
   border-radius: 7px;
 }
 
@@ -92,4 +92,11 @@
   text-transform: uppercase;
   font-weight: bold !important;
   font-size: 13px !important;
+}
+
+.MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: 600;
 }
