--- a/src/components/AirlinesBalance/AirlinesBalance.css
+++ b/src/components/AirlinesBalance/AirlinesBalance.css
@@ -7,6 +7,8 @@
   color: #333;
   margin-top: 49px;
   background-color: transparent;
+  color: #a1a1a1;
+  font-weight: bold;
 }
 
 .book-now-btn {
