--- a/public/style.css
+++ b/public/style.css
@@ -1,102 +1,3 @@
-.css-168qaks-MuiButtonBase-root-MuiTab-root.Mui-selected {
-  color: #fff !important;
-  background-color: #33cf96;
-  padding: 7px 15px !important;
-  border-radius: 7px;
-}
-
-.css-1aquho2-MuiTabs-indicator {
-  position: absolute;
-  height: 2px;
-  bottom: 0;
-  width: 100%;
-  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  background-color: transparent !important;
-}
-
-.css-1qglbxz {
-  border-bottom: none !important;
-  border-color: #ddd;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  display: flex;
-  justify-content: space-between !important;
-  align-items: center;
-}
-
-.css-168qaks-MuiButtonBase-root-MuiTab-root {
-  display: -webkit-inline-box;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  position: relative;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  background-color: transparent;
-  outline: 0;
-  border: 0;
-  margin: 0;
-  border-radius: 0;
-  /* padding: 0; */
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  vertical-align: middle;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -webkit-text-decoration: none;
-  text-decoration: none;
-  color: inherit;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 0.875rem;
-  line-height: 1.25;
-  letter-spacing: 0.02857em;
-  text-transform: uppercase;
-  max-width: 360px;
-  min-width: 90px;
-  position: relative;
-  min-height: 10px !important;
-  -webkit-flex-shrink: 0;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  padding: 8px 16px !important;
-  overflow: hidden;
-  white-space: normal;
-  text-align: center;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  color: rgba(0, 0, 0, 0.6);
-  text-transform: uppercase;
-  font-weight: bold !important;
-  font-size: 13px !important;
-}
-
-.MuiTabs-flexContainer.css-heg063-MuiTabs-flexContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  font-weight: 600;
+.selected {
+  color: "red";
 }
